--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
     <!-- Spring -->
     <spring.version>4.3.15.RELEASE</spring.version>
+    <spring.data.version></spring.data.version>
     <mybatis.version>3.4.6</mybatis.version>
     <mybatis.spring.version>1.3.2</mybatis.spring.version>
 
@@ -64,6 +65,13 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
       <version>${spring.version}</version>
+    </dependency>
+
+    <!-- data -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-commons</artifactId>
+      <version>${spring.data.version}</version>
     </dependency>
 
     <dependency>
