--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-.idea/
+# Created by .ignore support plugin (hsz.mobi)
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
 *.iml
-target/
+target
 profile/release
